// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`digit '0' AST to match snapshot 1`] = `"0"`;

exports[`digit '2' AST to match snapshot 1`] = `"2"`;

exports[`digit '9' AST to match snapshot 1`] = `"9"`;

exports[`digit 'a' Error to match snapshot 1`] = `
{
  "expected": [
    "a digit",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`digit 'a1' Error to match snapshot 1`] = `
{
  "expected": [
    "a digit",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`digits '0' AST to match snapshot 1`] = `"0"`;

exports[`digits '22' AST to match snapshot 1`] = `"22"`;

exports[`digits '99' AST to match snapshot 1`] = `"99"`;

exports[`digits 'a' Error to match snapshot 1`] = `
{
  "expected": [
    "optional digits",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`digits 'a12' Error to match snapshot 1`] = `
{
  "expected": [
    "optional digits",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
